Easy level task01

--- a/CodePractice/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice/CodePractice.csproj
@@ -50,6 +50,7 @@
     <Compile Include="BeginnerLevel\BeginnerLevelTask04.cs" />
     <Compile Include="BeginnerLevel\BeginnerLevelTask06.cs" />
     <Compile Include="BeginnerLevel\BeginnerLevelTask07.cs" />
+    <Compile Include="EasyLevel\EasyLevelTask01.cs" />
     <Compile Include="MainApp\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
