Solutions for Tasks 01,02,03 were added

--- a/CodePractice/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice/CodePractice.csproj
@@ -51,6 +51,8 @@
     <Compile Include="BeginnerLevel\BeginnerLevelTask06.cs" />
     <Compile Include="BeginnerLevel\BeginnerLevelTask07.cs" />
     <Compile Include="EasyLevel\EasyLevelTask01.cs" />
+    <Compile Include="EasyLevel\EasyLevelTask02.cs" />
+    <Compile Include="EasyLevel\EasyLevelTask03.cs" />
     <Compile Include="MainApp\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
