--- a/CodePractice/UnitTestForCodePractice/UnitTestForCodePractice.csproj
+++ b/CodePractice/UnitTestForCodePractice/UnitTestForCodePractice.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BegginerLevel\UnitTestTask3.cs" />
     <Compile Include="BegginerLevel\UnitTestTask2.cs" />
     <Compile Include="BegginerLevel\UnitTestTask1.cs" />
+    <Compile Include="EasyLevel\UnitTestTask04.cs" />
     <Compile Include="EasyLevel\UnitTestTask03.cs" />
     <Compile Include="EasyLevel\UnitTestTask02.cs" />
     <Compile Include="EasyLevel\UnitTestTask01.cs" />
