--- a/CodePractice/UnitTestForCodePractice/UnitTestForCodePractice.csproj
+++ b/CodePractice/UnitTestForCodePractice/UnitTestForCodePractice.csproj
@@ -60,12 +60,18 @@
     <Compile Include="BegginerLevel\UnitTestTask3.cs" />
     <Compile Include="BegginerLevel\UnitTestTask2.cs" />
     <Compile Include="BegginerLevel\UnitTestTask1.cs" />
+    <Compile Include="EasyLevel\UnitTestTask07.cs" />
+    <Compile Include="EasyLevel\UnitTestTask06.cs" />
+    <Compile Include="EasyLevel\UnitTestTask05.cs" />
     <Compile Include="EasyLevel\UnitTestTask04.cs" />
     <Compile Include="EasyLevel\UnitTestTask03.cs" />
     <Compile Include="EasyLevel\UnitTestTask02.cs" />
     <Compile Include="EasyLevel\UnitTestTask01.cs" />
     <Compile Include="Interface\IParceable.cs" />
     <Compile Include="Model\TestData.cs" />
+    <Compile Include="NormalLevel\UnitTestTask03.cs" />
+    <Compile Include="NormalLevel\UnitTestTask02.cs" />
+    <Compile Include="NormalLevel\UnitTestTask01.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestHelper\DataParcerTask01.cs" />
     <Compile Include="TestHelper\TestDataParcer.cs" />
@@ -80,6 +86,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="TestDataSet\NormalLevelTask01.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestDataSet\NormalLevelTask01_2.txt" />
     <Content Include="TestDataSet\TestDataSetTask01.xml" />
   </ItemGroup>
   <ItemGroup />
