--- a/CodePractice/UnitTestForCodePractice/UnitTestForCodePractice.csproj
+++ b/CodePractice/UnitTestForCodePractice/UnitTestForCodePractice.csproj
@@ -69,6 +69,10 @@
     <Compile Include="EasyLevel\UnitTestTask01.cs" />
     <Compile Include="Interface\IParceable.cs" />
     <Compile Include="Model\TestData.cs" />
+    <Compile Include="NormalLevel\UnitTestTask09.cs" />
+    <Compile Include="NormalLevel\UnitTestTask08.cs" />
+    <Compile Include="NormalLevel\UnitTestTask07.cs" />
+    <Compile Include="NormalLevel\UnitTestTask04.cs" />
     <Compile Include="NormalLevel\UnitTestTask03.cs" />
     <Compile Include="NormalLevel\UnitTestTask02.cs" />
     <Compile Include="NormalLevel\UnitTestTask01.cs" />
