--- a/CodePractice/UnitTestForCodePractice/UnitTestForCodePractice.csproj
+++ b/CodePractice/UnitTestForCodePractice/UnitTestForCodePractice.csproj
@@ -69,6 +69,12 @@
     <Compile Include="EasyLevel\UnitTestTask01.cs" />
     <Compile Include="Interface\IParceable.cs" />
     <Compile Include="Model\TestData.cs" />
+    <Compile Include="NormalLevel\UnitTestTask27.cs" />
+    <Compile Include="NormalLevel\UnitTestTask26.cs" />
+    <Compile Include="NormalLevel\UnitTestTask25.cs" />
+    <Compile Include="NormalLevel\UnitTestTask23.cs" />
+    <Compile Include="NormalLevel\UnitTestTask21.cs" />
+    <Compile Include="NormalLevel\UnitTestTask20.cs" />
     <Compile Include="NormalLevel\UnitTestTask16.cs" />
     <Compile Include="NormalLevel\UnitTestTask15.cs" />
     <Compile Include="NormalLevel\UnitTestTask14.cs" />
