Code Wars tasks

--- a/CodePractice/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice/CodePractice.csproj
@@ -65,9 +65,17 @@
     <Compile Include="BeginnerLevel\BeginnerLevelTask04.cs" />
     <Compile Include="BeginnerLevel\BeginnerLevelTask06.cs" />
     <Compile Include="BeginnerLevel\BeginnerLevelTask07.cs" />
+    <Compile Include="CodeWarsTasks\ArithmeticClass.cs" />
+    <Compile Include="CodeWarsTasks\HighestAndLowest.cs" />
+    <Compile Include="CodeWarsTasks\LikesString.cs" />
     <Compile Include="CodeWarsTasks\NarcissisticNumber.cs" />
+    <Compile Include="CodeWarsTasks\Pangram.cs" />
     <Compile Include="CodeWarsTasks\ReversedWords.cs" />
+    <Compile Include="CodeWarsTasks\Smiles.cs" />
     <Compile Include="CodeWarsTasks\SpinningWords.cs" />
+    <Compile Include="CodeWarsTasks\SumDigitClass.cs" />
+    <Compile Include="CodeWarsTasks\Tortoise.cs" />
+    <Compile Include="CodeWarsTasks\ValidatePinClass.cs" />
     <Compile Include="EasyLevel\EasyLevelTask01.cs" />
     <Compile Include="EasyLevel\EasyLevelTask02.cs" />
     <Compile Include="EasyLevel\EasyLevelTask03.cs" />
